2005-12-26  Remco den Breeje <remco@sx.mine.nu>
    * Version 0.5.0 - User can choose a layout, added built-in formats of date
      and time. Based on the patch for the clock-plugin by Nick Schermer and 
      Brian Tarricone. 
      See http://foo-projects.org/~nick/patches/xfce4-panel-clock.patch

2006-12-19  Nick Schermer <nick@xfce.org>
    * configure.in.in: Bump version to 0.4.1 for release

2006-12-17  Nick Schermer <nick@xfce.org>
    * Move the file into trunk.
    * Fix compiler warnings.
    * Add LINGUAS support.
    * Cygwin Fix.
    * Fix compiler warnings and header includes.
    * Use new module detection for the panel.
    * Fix multiple memory leaks.
    * Fix crash when the plugin was removed from the panel.
    * Use panel slice macros for creating structures.

2006-10-06  Remco den Breeje <remco@sx.mine.nu>
    * release 0.4.0
    compatible with xfce 4.4

2004-09-11  Choe Hwanjin <krisna@kldp.org>
    * release 0.3.1

2004-09-09  Choe Hwanjin <krisna@kldp.org>
    * Add French translation.
    Thanks to Stephane Roy <sroy@j2n.net>

2004-05-31  Choe Hwanjin <krisna@kldp.org>
    * Add Catalan translation.
    Thanks to Carles Muñoz Gorriz <carlesmu@internautas.org>

2004-01-18  Choe Hwanjin <krisna@kldp.org>
    * release 0.3.0

2004-01-04  Choe Hwanjin <krisna@kldp.org>
    * datetime/datetime.c: automatically change layout when the panel size is
      small

2004-01-01  Choe Hwanjin <krisna@kldp.org>
    * datetime/datetime.c: append entry to select date. format change is
      applied on closing option window

2003-12-29  Choe Hwanjin <krisna@kldp.org>
    * internationalization

2003-12-29  Choe Hwanjin <krisna@kldp.org>
    * datetime/datetime.c: split main label into two, date label and time label
      add Week starts monday option for calendar (#1181)
      Thanks to Jeroen Peters (xfce-goodies@jpeters.coldmail.nl)

2003-12-13  Choe Hwanjin <krisna@kldp.org>
    * add autogen.sh
    * update libtool to 1.5.0a
