@@ -1,5 +1,11 @@
-2005-12-26  Remco den Breeje <remco@sx.mine.nu>
-    * Version 0.5.0 - User can choose a layout, added built-in formats of date
+2007-01-12  Remco den Breeje <remco@sx.mine.nu>
+    * Show actual date and times instead of the format codes in the
+    config-dialog. 
+    * Created general strftime function for the datetime plugin
+      
+
+2006-12-26  Remco den Breeje <remco@sx.mine.nu>
+    * Trial Version 0.5.0 - User can choose a layout, added built-in formats of date
       and time. Based on the patch for the clock-plugin by Nick Schermer and 
       Brian Tarricone. 
       See http://foo-projects.org/~nick/patches/xfce4-panel-clock.patch
